# LEDEN_clothes_API

./: .gitignore  README.md  db.sqlite3  pyproject.toml  pytest.ini
myapi/: db.sqlite3
myapi/clothes/: admin.py  models.py  serializers.py  urls.py  views.py
myapi/clothes/migrations/: 0001_initial.py  0002_alter_type_comments.py
myapi/myapi/: settings.py  urls.py
